# ratel-bench

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  EXPERIMENTS.md  README.md  REPORT.md  RESULTS.md  biome.json  buildspec.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: notify-websites.yml  website-rebuild.yml
agent/: README.md  package.json  tsconfig.json
agent/src/: bedrock.ts  bfcl-candidates.ts  bfcl-corpus.test.ts  bfcl-export.ts  bfcl-report.test.ts  bfcl-report.ts  bfcl-summarize.test.ts  bfcl-summarize.ts  bfcl-types.ts  cli.ts  corpus.test.ts  corpus.ts  io.ts  metering.test.ts  metering.ts  model-endpoint.ts  model-resolve.ts  paths.test.ts  paths.ts  pool.test.ts  pool.ts  prune-prerelease-reports.ts  rejudge.test.ts  rejudge.ts  report-cli.ts  report.test.ts  report.ts  retrieval-compare.ts  run-all.ts  runner.test.ts  runner.ts  sragents-candidates.ts  sragents-report.test.ts  sragents-report.ts  sragents-select.test.ts  sragents-select.ts  sragents-summarize.test.ts  sragents-summarize.ts  sragents-types.ts  types.ts  (+3 more)
bfcl-loaded/: README.md  methodology.md
datasets/: example-dataset.json
docs/: aws-runbook.md
docs/adr/: 0005-benchmark-design.md  0006-benchmark-corpus-and-eval-modes.md  README.md  (+4 more)
infra/: .gitignore  README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
results/: metatool-retrieval-summary.jsonl  metatool-skill-eval-summary.jsonl  sragents-skill-retrieval-summary.jsonl
retrieval/: Cargo.toml  README.md  build.rs
retrieval/src/: corpus.rs  lib.rs  main.rs  retrieval.rs  runner.rs  skill_runner.rs  stats.rs
retrieval/src/ingest/: bfcl.rs  metatool.rs  mod.rs  sragents.rs  toolret.rs
retrieval/tests/: metatool_ingest.rs
src/: catalog.ts  cli.ts  dataset.ts  pool.ts  runner.ts  tool-selection.ts  types.ts
(+36 files in other folders)
