[package]
name = "ratel-benchmark-retrieval"
version = "0.1.0"
edition = "2024"
license-file = "../LICENSE.md"
repository = "https://github.com/ratel-ai/ratel-bench"
publish = false

[lib]
name = "ratel_benchmark_retrieval"
path = "src/lib.rs"

[[bin]]
name = "ratel-benchmark-retrieval"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratel-ai-core = { git = "ssh://git@github.com/ratel-ai/ratel.git", tag = "v0.3.0-hybrid.1", version = "0.3.0-hybrid.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
indicatif = "0.17"
parquet = { version = "58", default-features = false, features = ["snap", "zstd"] }
rand = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.10"
